--- a/templates/commsquiz.html
+++ b/templates/commsquiz.html
@@ -75,7 +75,7 @@
    <div class="nav-bar">
        <img src="../static/logo.png">
        <h1>Communications</h1>
-       <a href="{{url_for('account')}}">Home</a>
+       <a href="{{url_for('account', username=current_user.username)}}">Home</a>
     </div>
     <div class="content-section">
       <h2>Choose the best answer among the choices</h2>
