--- a/templates/comms_answers.html
+++ b/templates/comms_answers.html
@@ -55,7 +55,7 @@
     <div class="nav-bar">
         <img src="../static/logo.png">
         <h1>Answers</h1>
-        <a href="{{url_for('account')}}">Home</a>
+        <a href="{{url_for('account', username=current_user.username)}}">Home</a>
     </div>
     <div class="answer-section">
         <ol type="1">  
