--- a/templates/comms_result.html
+++ b/templates/comms_result.html
@@ -73,7 +73,7 @@
     <div class="nav-bar">
         <img src="../static/logo.png">
         <h1>Answer History</h1>
-        <a href="{{url_for('account')}}">Home</a>
+        <a href="{{url_for('account', username=current_user.username)}}">Home</a>
     </div>  
     <div class="content-section">
     <h1 class="result">Your score is {{no_correct_answer}} out of {{total_questions}}, {{score_percentage}}%</h1>
