--- a/templates/edit_password.html
+++ b/templates/edit_password.html
@@ -84,7 +84,7 @@
                     {% endif %}
                     {% endwith %}
                     <button type="submit">Save</button>
-                    <button type="submit" onclick="window.location.href = '{{url_for('account')}}';" class="cancel-btn">Cancel</button>
+                    <button type="submit" onclick="window.location.href = '{{url_for('account', username=current_user.username)}}';" class="cancel-btn">Cancel</button>
                   </div>        
                 </form>
             </fieldset>
