--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -14,7 +14,7 @@
             display: block; 
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
             text-align: center;
-            width: 500px;
+            width: 550px;
             height: 500px;
         }
         .main-section img {
@@ -26,7 +26,7 @@
         .main-section form {
             position: relative; 
             margin: 0 auto; 
-            width: 400px;
+            width: 450px;
             height: 300px; 
             top: 40px;
             
@@ -66,6 +66,9 @@
                     <div class="form-group">
                        <span>{{ form.date_of_birth.label }} {{ form.date_of_birth }}</span>  
                     </div>
+                    <div class="form-group">
+                        <span>{{ form.country.label }} {{ form.country }}</span>  
+                     </div>
                     <div class="form-group">
                         <span> {{form.instagram_username.label}}{{form.instagram_username}}</span>  
                     </div>
