--- a/templates/account.html
+++ b/templates/account.html
@@ -71,7 +71,7 @@
             position: absolute;
             min-width: 130px;
             box-shadow: 2px 2px 5px black;
-             z-index: 1; /*ensures that all the elements are also hovered even if there is an element under it */
+            z-index: 1; /*ensures that all the elements are also hovered even if there is an element under it */
 
         }
         .dropdown:hover .content{
@@ -97,7 +97,7 @@
             height: 150px;
          
         }
-        .user-section{
+        .user-section {
             display: flex;
             flex-direction: column;
             /* justify-content: center; */
@@ -276,6 +276,7 @@
                 <a href="{{url_for('electronics')}}">Math</a>
             </span>
         </div>  
+        <a href="{{url_for('account', username=current_user.username)}}" style="margin-right: -11%; margin-left: 8%;"><img src="{{image_file}}" alt="Example Image" style="width:50px; height:50px; border-radius: 50%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); " class="user_profile_image"></a>
         <div class="dropdown">
             <button>Account &#9660;</button>
             <div class="content">
@@ -291,7 +292,7 @@
     <div class="main-section">
     <div class="user-section">
         <div class="user-header">
-                <img src="{{image_file}}" alt="Example Image" class="user_profile_image">
+                <img src="{{profile_pic}}" alt="Example Image" class="user_profile_image">
                 <div class="user-bio">
                     <p class="present_user">{{present_user}}</p>
                     <p class="username">@{{username}}</p>
@@ -304,11 +305,11 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                     <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
                 </svg>
-                <a href="{{facebook}}"> {{facebook}}</a>
+                 <a href="{{facebook}}"> {{facebook}}</a>
             </p>
-            <p>&#x1F4F7<a href="{{instagram}}"> {{instagram}}</a></p>
-        </div>
-        
+            <p>&#x1F4F7 <a href="{{instagram}}">{{instagram}}</a></p>
+            <p>&#128205 <a href="{{instagram}}">{{instagram}}</a></p>
+        </div>  
     </div>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
@@ -356,10 +357,10 @@
           </div>
           
           <div class="next-page">
-            {% if user %}
-              {%for page_num in user.iter_pages()%}
+            {% if user_course %}
+              {%for page_num in user_course.iter_pages()%}
                  {%if page_num %}
-                 <a href="{{url_for('account', page=page_num, username=current_user.username)}}">{{page_num}}</a>
+                 <a href="{{url_for('account', page=page_num, username=user.username)}}">{{page_num}}</a>
                  {%endif%}
               {%endfor%}
               {%endif%}
