--- a/app/templates/commsquiz.html
+++ b/app/templates/commsquiz.html
@@ -41,13 +41,14 @@
             color: rgb(8, 90, 255);
         }
         .content-section {
+          position: relative;
           display: flex;
           flex-direction: column;
           justify-content: center;
           align-items: center;
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  
           width: 70%;
-          height: 90%;
+          height: 1000px;
           margin-top: 3%;
           margin-bottom: 3%;
         }
@@ -67,7 +68,9 @@
           color:red;
           font-weight: lighter;
           text-align: center;
-          margin-top: -24%; 
+          width: 240px;
+          height: 50px;
+          margin-top: -90%; 
         }
   </style>
 </head>
@@ -78,7 +81,7 @@
        <a href="{{url_for('account', username=current_user.username)}}">Home</a>
     </div>
     <div class="content-section">
-      <h2>Choose the best answer among the choices</h2>
+      <h2 style="margin-top: -100%;">Choose the best answer among the choices</h2>
       <div class="flash-message">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -86,6 +89,7 @@
         {% endif %}
         {% endwith %}
        </div>
+       <div style = "position: absolute; margin-top: -25%; width: 700px; height: 550px;">
       <form action="/communications" method="post">
                {{ form.csrf_token }}
                <input type="hidden" name="user_id" value="{{ session.user_id }}">
@@ -116,6 +120,7 @@
                </ol> <br>      
                <button type="submit" class="submit">Submit Answers</button>
           </form>
+          <div>
           </div>
 </body>
 </html>
