--- a/app/templates/commsquiz.html
+++ b/app/templates/commsquiz.html
@@ -51,6 +51,7 @@
           height: 1000px;
           margin-top: 3%;
           margin-bottom: 3%;
+          border-radius: 5%;
         }
         .content-header {
           margin-top: 4%;
@@ -118,9 +119,9 @@
                {% endfor %}
       
                </ol> <br>      
-               <button type="submit" class="submit">Submit Answers</button>
+               <button type="submit">Submit Answers</button>
           </form>
-          <div>
+        </div>
           </div>
 </body>
 </html>
