--- a/app/templates/elecsquiz.html
+++ b/app/templates/elecsquiz.html
@@ -51,6 +51,7 @@
           height: 1000px;
           margin-top: 3%;
           margin-bottom: 3%;
+          border-radius: 5%;
         }
         .content-header {
           margin-top: 4%;
@@ -89,7 +90,7 @@
         {% endif %}
         {% endwith %}
        </div>
-      <div style = "position: absolute; margin-top: -25%; width: 700px; height: 550px; ">
+      <div style = "position: absolute; margin-top: -25%; width: 700px; height: 550px;">
       <form action="/electronics" method="post">
                {{ form.csrf_token }}
                <input type="hidden" name="user_id" value="{{ session.user_id }}">
@@ -121,7 +122,7 @@
       
                </ol> <br>
               
-               <button type="submit" class="submit">Submit Answers</button>
+               <button type="submit" style="text-align: center;">Submit Answers</button>
           </form>
           </div>
           </div>
