--- a/app/templates/mathquiz.html
+++ b/app/templates/mathquiz.html
@@ -51,6 +51,7 @@
           height: 1000px;
           margin-top: 3%;
           margin-bottom: 3%;
+          border-radius: 5%;
         }
         .content-header {
           margin-top: 4%;
@@ -118,7 +119,7 @@
                {% endfor %}
       
                </ol> <br>      
-               <button type="submit" class="submit">Submit Answers</button>
+               <button type="submit" >Submit Answers</button>
           </form>
         </div>
           </div>
